# fastsin

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: build_lut.rs  speed.rs
plot/: Cargo.toml  cos_diff.p  data.csv  sin.p  sin_diff.p
plot/src/: main.rs
src/: lib.rs
